add more css index.css

--- a/index.css
+++ b/index.css
@@ -9,3 +9,4 @@ button{
     padding: 0px 2px 4px 0px;
 }
 .header-top p{ font-size: 13px; color: black;}
+#menu .top{font-size: 13px; color: blue; opacity: 0.8;}
